Kubernetes/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: bittorrent-tcp
      port: 6881
      targetPort: bittorrent-tcp
    - name: bittorrent-udp
      port: 6881
      targetPort: bittorrent-udp
      protocol: UDP
  selector:
    app: qbittorrent
